# xscribe

./: Dockerfile  compose.yml  pyproject.toml
app/: core.py  service.py  utils.py
