[tool.poetry]
name = "xscribe"
version = "0.1.0"
description = "HTTP WebService for Rabbi Chat"
authors = ["Onojeta Brown <onosbrown.saved@gmail.com>"]
homepage = "https://github.com/onos9/rabbi"
repository = "https://github.com/onos9/xcribe"
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
gunicorn = "^21.0.1"
tqdm = "^4.66.1"
python-multipart = "^0.0.6"
fastapi = "^0.104.1"
llvmlite = "^0.41.1"
numba = "^0.58.0"
faster-whisper = { git = "https://github.com/SYSTRAN/faster-whisper.git", branch = "master" }
torch = { version = "=1.13.0+cu117", source = "pytorch" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
